--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
         jdbc:
           batch_size: 5
         default_batch_fetch_size: 500
+  thymeleaf:
+    cache: false
 logging:
   level:
     org:
